2001-09-23  Sam Steingold  <sds@gnu.org>

	optional filling of PPHELP streams
	* stream.d (wr_ch_pphelp): when filling, handle spaces specially
	(wr_ch_array_pphelp): split on NL and (when filling) on spaces
	(wr_ch_array_pphel_): renamed from wr_ch_array_pphelp
	* constsym.d (*PRINT-PRETTY-FILL*): added
	* spvw.d (init_symbol_values): defvar *PRINT-PRETTY-FILL*

2001-09-24  Stefan Kain  <stefan.kain@freenet.de>

	* lispbibl.d: translated the rest of the comments

2001-08-12  Bruno Haible  <haible@clisp.cons.org>

	* io.d (a_letterdigit, a_expodigit): New macros.
	(test_potential_number_syntax): Swap step2 and step3. Translate into
	a_letterdigit and a_expodigit. Update step4 and step6 accordingly.
	(test_number_syntax): Drop most of step4. Update step5 accordingly.

2001-08-25  Bruno Haible  <haible@clisp.cons.org>

	Make it compile in C++ mode.
	* foreign.d (free_foreign_callin): Cast free_callback argument.
	(struct_alignment): Provide alternative definition in C++.

2001-09-22  Sam Steingold  <sds@gnu.org>

	* error.d (end_error): use exit() instead of NOTREACHED to avoid
	an infinite loop reporting fatal errors

2001-09-22  Sam Steingold  <sds@gnu.org>

	new built-ins: SYS::WHITESPACEP & SYS::WRITE-SPACES
	* constsym.d, subr.d (whitespacep, write_spaces): added
	* io.d (write_spaces, whitespacep): implemented
	* lispbibl.d (cint_white_p): new macro
	* stream.d (strip_white): use it
	* compiler.lisp (stream-tab): use write-spaces
	* describe.lisp (describe-stream): ditto
	* format.lisp (whitespacep): commented out

2001-09-21  Sam Steingold  <sds@gnu.org>

	binary i/o on True64
	* stream.d (bitbuff_is_I): do not add wbitm(intLsize) to wert
	before calling negfixnum (why was it there in the first place?)

2001-09-21  Sam Steingold  <sds@gnu.org>

	some bugfixes to the Pretty-Printer
	* io.d (FORMAT-TABULATE): check the optional arguments
	* format.lisp (formatter-main-1): added FORMAT-PPRINT-NEWLINE and
	FORMAT-PPRINT-INDENT