@@ -1,3 +1,9 @@
+2001-09-24  Sam Steingold  <sds@gnu.org>
+
+	added functionp macro predicate
+	* lispbibl.d (functionp): define
+	* record.d (MAKE-FUNCTION-MACRO, %COPY-GENERIC-FUNCTION): use it
+
 2001-09-23  Sam Steingold  <sds@gnu.org>
 
 	optional filling of PPHELP streams
